# soroban

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  project.yml  salpa.yaml
.claude/skills/anzan/: SKILL.md
.claude/skills/feature-parity/: SKILL.md
.claude/skills/release-doctor/: SKILL.md
.claude/skills/run-apps/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  deploy-site.yml  release-rust.yml  release.yml  rust-ci.yml  rust-gui-build.yml  screenshots.yml  site-ci.yml  ts-ci.yml
App/Resources/Themes/: github-light.json  gruvbox-dark.json  one-light.json  solarized-dark.json  solarized-light.json  soroban-dark.json  terminal-green.json
App/Sources/: AboutView.swift  BinaryEditorView.swift  CalculatorBinaryHost.swift  CellControls.swift  CellEditorView.swift  CellView.swift  ContentView.swift  FormatActions.swift  HistoryLogView.swift  InputBarView.swift  InspectorView.swift  SettingsView.swift  SheetTabBar.swift  SorobanApp.swift  SpreadsheetView.swift  SuggestionsView.swift
App/Sources/Session/: CalculatorSession.swift  HistoryEntry.swift  LogStore.swift  WorkbookManager.swift
Engine/: Package.swift
Kit/: Package.resolved  Package.swift
bench/: .gitignore  README.md  RESULTS.md  harness.py  report.py  report_template.html  results.json  run.py
bench/rust/: Cargo.toml
bench/rust/src/: gota.rs  main.rs
bench/swift/: Package.resolved  Package.swift
docs/: ANZAN.md  ARCHITECTURE.md  CICD.md  DECIMAL.md  FIXED-WIDTH.md  FORMAT.md  MIGRATION.md  MODES.md  MODULES.md  PROGRAMMER.md  README.md  RELEASING.md  STDLIB.md
examples/: interchange.soroban  mortgage.soroban  sales.csv
rust/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
rust/anzan/: Cargo.toml
rust/anzan/src/: calculator.rs  documentation.rs  error.rs  lib.rs  mode.rs  parser.rs  script.rs
rust/anzan/src/ast/: mod.rs  source.rs
rust/anzan/src/calculator/: documentation.rs  host_seams.rs
rust/anzan/src/eval/: binary_format.rs  binary_view.rs  currency.rs  data_type.rs  environment.rs  evaluator.rs  fixed_decimal.rs  fixed_int.rs  format_builder.rs  grouped.rs  json.rs  mod.rs  money.rs  numeric.rs  registry.rs  value.rs
rust/anzan/src/eval/binary_view/: fields.rs  layout.rs
rust/anzan/src/eval/evaluator/: calls.rs  helpers.rs  operators.rs  recursion.rs  resolution.rs  values.rs
rust/anzan/src/eval/functions/: accounting.rs  controls.rs  core.rs  data.rs  dates.rs  finance.rs  mod.rs  programmer.rs  stats.rs  trig.rs
rust/anzan/src/eval/functions/core/: implementations.rs
rust/anzan/src/eval/functions/finance/: helpers.rs
rust/anzan/src/eval/value/: tests.rs
rust/anzan/src/lexer/: mod.rs  tests.rs  token.rs
rust/anzan/src/number/: format.rs  math.rs  mod.rs  tests.rs
rust/anzan/src/parser/: definitions.rs  expressions.rs  primary.rs  references.rs  tests.rs
rust/anzan/src/script/: tests.rs
rust/anzan/tests/: binary_format.rs  binary_view.rs  binary_view_ans.rs  binary_view_builder.rs  binary_view_fields.rs  calculator_api.rs  gherkin.rs  recursion.rs  typed_errors.rs
rust/cli/: Cargo.toml
rust/cli/src/: main.rs  repl.rs
rust/cli/tests/: smoke.rs
rust/docs/: ANZAN.md  ARCHITECTURE.md  CLI.md  ENGINE.md  GUI.md
rust/engine/: Cargo.toml
rust/engine/examples/: author_interchange.rs
rust/engine/src/: cell.rs  cell_address.rs  cell_format.rs  context.rs  controls.rs  csv.rs  data_store.rs  history_reflection.rs  journal.rs  lib.rs  named_cells.rs  package.rs  reference_rewriter.rs  reflection.rs  sheet_store.rs  spreadsheet.rs  structure.rs  workbook.rs
rust/engine/src/cell_format/: tests.rs
rust/engine/src/csv/: tests.rs
rust/engine/src/data_store/: tests.rs
rust/engine/src/journal/: tests.rs
rust/engine/src/named_cells/: tests.rs
rust/engine/src/package/: tests.rs
rust/engine/src/reference_rewriter/: tests.rs
rust/engine/src/sheet_store/: mutation.rs  resolvers.rs
rust/engine/src/spreadsheet/: definitions.rs  evaluation.rs
rust/engine/src/structure/: tests.rs
rust/engine/src/workbook/: tests.rs
rust/engine/tests/: binary_format.rs  documentation.rs  gherkin.rs  history_reflection.rs  interchange.rs  living_spec.css  living_spec.foot.js  living_spec.head.js  living_spec.rs  mutation.rs  reflection.rs  sheet_graph.rs  workbook_edges.rs
rust/gui/: Cargo.toml  salpa.yaml
rust/gui/packaging/: AppIcon.icns  make-dmg.sh
rust/gui/src/: app_tests.rs  binary_panel.rs  examples.rs  lib.rs  main.rs  message.rs  panels.rs  render.rs  session.rs  settings.rs  shot.rs  state.rs  themes.rs  update.rs  view.rs
rust/gui/src/assets/fonts/: README.md
rust/gui/src/examples/: tests.rs
rust/gui/src/session/: binary.rs  cells.rs  controls.rs  document.rs  formats.rs  inspector.rs  log.rs  persistence.rs  tests.rs  worksheets.rs
rust/gui/src/themes/: tests.rs
rust/gui/tests/: session.rs
rust/gui/tests/features/: session.feature
rust/gui/tests/session/: binary.rs  calculator.rs  grid.rs  inspector.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
scripts/: generate-living-spec.sh  generate-perf.sh  generate-screenshots.sh  generate_icon.py  generate_living_spec.py  generate_perf.py  generate_screenshots.py  rust-report.mjs
site/: README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts
site/public/: perf.html  report.html  rust-report.html  spec.html
site/src/: content.config.ts
site/src/lib/: anzan.ts  (+1 more)
site/tests/: repl.spec.ts
spec/: README.md
spec/anzan/: anzan.feature  calculation.feature  decimal.feature  formatting.feature  functions.feature  mathematics.feature  modes.feature  reflection.feature  scripting.feature
swift/: CHANGELOG.md  CLAUDE.md  README.md  project.yml  salpa.yaml
swift/App/: Info-iOS.plist
swift/Engine/: Package.resolved  Package.swift
swift/Kit/: Package.swift
swift/docs/: APP.md  ARCHITECTURE.md  CLI.md  ENGINE.md  KIT.md
ts/: CHANGELOG.md  README.md  cucumber.mjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
ts/scripts/: vendor-wasm.mjs
ts/src/: backend.ts  index.test.ts  index.ts
(+244 files in other folders)
