# The Rust ecosystem's cargo workspace (docs/MIGRATION.md). Members arrive by
# phase: anzan (the language) first, then engine, cli, gui, kit.
[workspace]
resolver = "2"
members = ["anzan", "cli", "engine"]
# `gui` (Phase 3b) is deliberately EXCLUDED, not a member: it depends on the
# sibling `rime` repo via a local path and pulls in iced (heavy, needs system
# libraries on Linux), so a workspace-wide `cargo build`/CI must not touch it.
# Build it standalone: `cd gui && cargo build`. Phase 4 moves it into a proper
# CI job (rime vendored/submoduled + platform deps) and back into `members`.
exclude = ["gui"]

# Shared pins so member crates never drift.
[workspace.dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
# Pure-Rust libm for the via_double transcendental seam — platform-independent
# results matter now that two implementations must agree (docs/MIGRATION.md §3).
libm = "0.2"
# Grow the stack for deep non-tail recursion — the continueOnFreshStack analogue.
stacker = "0.1"
# Workbook persistence: the .soroban JSON envelope (docs/FORMAT.md).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SQLite-backed data sheets (DataStore). `bundled` compiles SQLite in, so CI
# runners need no system library (Swift links the macOS system SQLite).
rusqlite = { version = "0.32", features = ["bundled"] }
# output-json powers the Rust test report (deploy-site.yml → scripts/rust-report.mjs):
# the gherkin runner emits Cucumber JSON when SOROBAN_REPORT is set. Normal
# `cargo test` is unaffected (the writer is env-gated).
cucumber = { version = "0.21", features = ["output-json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
