[package]
name = "anzan"
version = "0.1.0"
edition = "2021"
description = "The Anzan language — lexer, parser, evaluator, exact numbers, the function library, and the Calculator facade. Knows nothing about grids or files."
license = "MIT"

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
libm = { workspace = true }
stacker = { workspace = true }

# `SystemTime::now()` panics on wasm32-unknown-unknown — the `today()` builtin
# reads the JS host clock there instead (see eval/functions/dates.rs).
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
