# The WASM binding crate — the `anzan` engine compiled for JS hosts (the
# `@alleato/anzan` npm package in ts/ and the site's live REPL). EXCLUDED from
# the workspace (like gui/): it has its own lockfile and builds via wasm-pack.
# Mirrors the sibling dorado repo's rust/wasm pattern. Never reimplement
# language logic here; it is a thin binding over `anzan`.
[package]
name = "anzan-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anzan = { path = "../anzan" }
wasm-bindgen = "0.2"
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
